# waku

./: .editorconfig  .gitignore  .gitlint  .pre-commit-config.yaml  .typos.toml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  context7.json  gitlint_plugins.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrefly.toml  pyrightconfig.json  renovate.json  sitemap.xml  zensical.toml
.claude/: settings.local.json
.github/: changed-files-spec.yml  dependabot.yaml  renovate.json  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-approve-renovate.yml  auto-assign.yml  ci.yml  claude-code-review.yml  claude.yml  cleanup-preview.yml  deploy-docs.yml  lint.yml  preview-docs.yml  publish.yml  release.yml  test.yml  validate.yml
changelog/: index.html
code/: basic.py
code/di/scopes/: transient.py
code/examples/: modularity.py
code/getting_started/: application.py
code/providers/: injecting.py
code/providers/scopes/: singleton.py  transient.py
code/scopes/: object.py
config/release-templates/.components/: changelog_header.md.j2  changelog_init.md.j2  changelog_update.md.j2  changes.md.j2  macros.common.j2  macros.md.j2
contributing/: index.html
contributing/docs/: index.html
development/contributing/: index.html
development/docs/: index.html
docs/: LICENSE  changelog.md  contributing.md  getting-started.md  index.md  license.md  reference.md
docs/advanced/: conditional-providers.md  custom-extensions.md  di-patterns.md  index.md  multi-bindings.md
docs/advanced/di/: conditional-providers.md  di-patterns.md  index.md  multi-bindings.md
docs/advanced/extensions/: custom-extensions.md  index.md
docs/assets/stylesheets/: extra.css
docs/code/: mediator.py
docs/code/di/: injecting.py  manual_di.py
docs/code/eventsourcing/: custom_serializer.py  enricher.py  postgres_config.py  postgres_setup.py
docs/code/examples/: mediator.py  modularity.py
docs/code/getting_started/: application.py  main.py  settings.py
docs/code/integrations/: fastapi_example.py
docs/code/providers/: service_repository.py
docs/code/scopes/: scoped.py
docs/contributing/: contributing.md  docs.md  index.md
docs/core/: modules.md
docs/development/: contributing.md  docs.md
docs/examples/: basic.md  cqrs.md  eventsourcing.md  mediator.md  modularity.md
docs/extensions/: cqrs.md  custom-extensions.md  lifecycle.md  validation.md
docs/extensions/eventsourcing/: aggregates.md  event-store.md  index.md  projections.md  schema-evolution.md  snapshots.md  testing.md
docs/features/: index.md  validation.md
docs/features/cqrs/: events.md  index.md  pipeline.md  requests.md
docs/features/eventsourcing/: aggregates.md  event-store.md  index.md  projections.md  schema-evolution.md  snapshots.md  testing.md
docs/features/messaging/: events.md  index.md  pipeline.md  requests.md
docs/fundamentals/: application.md  integrations.md  lifespan.md  modules.md  providers.md  testing.md
docs/includes/: abbreviations.md
docs/integrations/: asgi.md  litestar.md
docs/plans/: 2026-02-14-core-documentation-design.md  2026-02-14-core-documentation-plan.md
docs/usage/: dependency-injection.md  dp.md  lifespan.md  modules.md  providers.md
docs/usage/extensions/: index.md
examples/: conditional_providers.py  contextual_provider.py  mediator.py  modularity.py  modules.py  providers_registration.py
examples/basic/: index.html
examples/cqrs/: basic_usage.py  index.html  pipeline_behaviors.py
examples/eventsourcing/: basic_usage.py
examples/eventsourcing/postgres/: compose.yaml  (+2 more)
examples/mediator/: index.html
examples/messaging/: basic_usage.py  pipeline_behaviors.py
examples/modularity/: index.html
extensions/lifecycle/: index.html
extensions/validation/: index.html
getting-started/: index.html
integrations/: index.html
integrations/asgi/: index.html
integrations/litestar/: index.html
license/: index.html
overrides/: main.html
overview/: index.html
reference/: index.html
search/: search_index.json
src/lattice/: __init__.py  application.py  di.py  extensions.py  module.py  modules.py  validation.py
src/waku/: __init__.py  _lifespan.py  _utils.py  application.py  container.py  di.py  exceptions.py  extensions.py  factory.py  graph.py  lifespan.py  module.py  testing.py
tests/: conftest.py  data.py  mock.py  module_utils.py  test_application.py  test_di.py  test_extensions.py  test_module.py  test_testing.py  test_testing_override.py  test_testing_overrides.py  test_validation.py
tests/application/: test_lifecycle.py  test_module_registration.py
tests/cqrs/: test_map_freeze.py  test_multi_module_handlers.py  test_utils.py
tests/di/: test_providers.py  test_scopes.py
tests/eventsourcing/: conftest.py  domain.py  helpers.py  test_aggregate.py  test_aggregate_spec.py  test_bind_tables.py  test_contracts.py  test_decider.py  test_handler.py  test_in_memory_store.py  test_introspection.py  test_modules.py  test_multi_module_integration.py  test_repository.py  test_retry.py  test_sqlalchemy_modules.py  test_stream_helpers.py  test_testing_dsl.py  test_wait_for_projection.py
tests/extensions/: test_application_extensions.py  test_module_extensions.py  test_on_before_container_build.py  test_on_module_registration.py  test_registry.py
tests/messaging/: test_event_publishers.py  test_map_freeze.py  test_map_registration.py  test_message_bus.py  test_multi_module_handlers.py  test_utils.py
tests/modules/: test_dynamic_modules.py  test_metadata_isolation.py
tests/testing/: test_create_test_app.py  test_override.py
tests/validation/: conftest.py  test_cqrs_handler_accessibility.py  test_dependencies_accessible.py  test_handler_accessibility.py  test_scope_mismatch.py
usage/cqrs/: index.html
usage/dependency-injection/: index.html
usage/dp/: index.html
usage/extensions/: index.html
usage/lifespan/: index.html
usage/mediator/: index.html
usage/modules/: index.html
usage/providers/: index.html
usage/quickstart/: index.html
(+295 files in other folders)
