[project]
name = "waku"
version = "0.1.2"
description = "Microframework for building modular and loosely coupled applications"
requires-python = ">=3.11"
readme = "README.md"
authors = [
  { name = "Daniil Kharkov", email = "fadeddexofan@gmail.com" },
  { name = "Doctor", email = "thirvondukr@gmail.com" },
]
license = "MIT"
keywords = ["architecture", "modular", "decoupled", "framework"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Changelog = "https://github.com/waku-py/waku/blob/master/CHANGELOG.md"
Issues = "https://github.com/waku-py/waku/issues"
Repository = "https://github.com/waku-py/waku"

[project.optional-dependencies]
aioinject = ["aioinject>=0.35.3"]
litestar = [
  "litestar>2",
  "litestar-msgspec", # TODO: Remove constraint after msgspec update
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = ["src/waku", "tests"]

[dependency-groups]
dev = [
  "pip-audit>=2.7.3",
  "rich>=13.9.4",
  "setuptools>=75.6.0",
]
lint = [
  "deptry>=0.21.1",
  "gitlint>=0.19.1",
  "pre-commit>=4.0.1",
  "ruff>=0.8.3",
]
test = [
  "pytest-archon>=0.0.6",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-randomly>=3.16.0",
  "pytest>=8.3.4",
]
typecheck = [
  "mypy>=1.13.0",
  "types-setuptools>=75.6.0.20241126"
]

# ----- UV settings -----
[tool.uv]
default-groups = ["dev", "lint", "test", "typecheck"]
override-dependencies = [
  "msgspec; sys_platform == 'never'", # TODO: Remove constraint after msgspec update
]


# ----- Pytest settings -----
[tool.pytest.ini_options]
xfail_strict = true
norecursedirs = ".* __pycache__"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
addopts = [
  "--doctest-modules",
  "--strict-markers",
  "--strict-config",
  #  "--cov-fail-under=90",
]


# ----- Coverage settings -----
[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_also = [
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if (?:t(yping)?\\.)?TYPE_CHECKING:",
  "@(?:t(yping)?\\.)?overload",
  "@(abc\\.)?abstractmethod",
  "class .*\\(.*\\bProtocol\\b.*\\):",
  "(?:t(yping)?\\.)?assert_never",
]


# ----- Ruff settings -----
[tool.ruff]
unsafe-fixes = true
show-fixes = true
line-length = 120
target-version = "py311"

[tool.ruff.lint]
preview = true
extend-select = ["ALL"]
ignore = [
  "A005", # Module is shadowing a Python builtin module
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "COM812", # Trailing comma missing. Conflicts with ruff format
  "CPY", # flake8-copyright
  "D1", # All 1xx pydocstyle codes
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "DOC201", # `return` is not documented in docstring
  "E501", # Never enforce line length
  "ISC001", # Implicitly concatenated string literals on one line. Conflicts with ruff format
  "RET504", # Unnecessary variable assignment before `return` statement
  "RUF001", # ruff unicode specific rules
  "RUF002", # ruff unicode specific rules
  "RUF003", # ruff unicode specific rules
  "TC006", # Add quotes to type expression in `typing.cast()`
  "TD", # flake8-todos
  "TRY003", # Duplicates EM101 warning
]
unfixable = [
  "B", # Avoid trying to fix flake8-bugbear violations.
  "ERA", # Avoid deleting commented-out code
]

flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
mccabe = { max-complexity = 10 }
pydocstyle = { convention = "google" }
pylint = { max-args = 7 }

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
  "INP001", # File is part of an implicit namespace package
]
"tests/*" = [
  "FBT001", # Boolean-typed positional argument in function definition
  "PLR2004", # Magic value comparison
  "S101", # Usage of assert
  "S311", # Usage of non-cryptographic random
  "TRY002", # Raise Exception or BaseException directly
]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
preview = true
quote-style = "single"
docstring-code-format = true


# ----- Deptry settings -----
[tool.deptry]
known_first_party = ["waku"]

[tool.deptry.package_module_name_map]
litestar-msgspec = "msgspec"

[tool.deptry.per_rule_ignores]
DEP002 = ["litestar-msgspec"]
DEP004 = ["gitlint"]


# ----- Mypy settings -----
[tool.mypy]
# Mypy configuration:
# https://mypy.readthedocs.io/en/latest/config_file.html
follow_imports = "normal"
allow_redefinition = false
# Any is 'ok' as long as it is a wildcard
disallow_any_explicit = false
ignore_errors = false
ignore_missing_imports = false
implicit_reexport = false
local_partial_types = true
strict = true
strict_optional = true
show_error_codes = true
no_implicit_optional = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "gitlint.*"
ignore_missing_imports = true


# ----- Semantic release settings -----
[tool.semantic_release]
build_command = """
command -v uv 2>/dev/null || pip install uv
uv lock
git add uv.lock
uv build
"""
assets = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = false
allow_zero_version = true
version_variables = ["src/waku/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(master|main)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
default_templates = { changelog_file = "CHANGELOG.md" }
template_dir = "non-existing-dir"
exclude_commit_patterns = [
  '''Merge? .*''',
  '''build\((?!deps\): .+)''',
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
]

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
# Так же используется в `gitlint_plugins.py` для определения доступных типов коммита
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
